Adição do interceptador de requisiçoes HTTP

--- a/filmesproj/src/app/site/components/filme-detalhe/filme-detalhe.component.html
+++ b/filmesproj/src/app/site/components/filme-detalhe/filme-detalhe.component.html
@@ -1,7 +1,7 @@
 <div class="filme-detalhe">
     <div id="header">
         <button id="voltar" (click)='voltar()'>Voltar</button>
-        <button id="favoritar" (click)='favoritarFilme(filme.id)'><i id="coracao"class="fa fa-heart"></i></button>
+        <button id="favoritar" (click)='favoritarFilme()'><i id="coracao"class="fa fa-heart"></i></button>
         <button id="assistir" (click)='assistirFilme()'><i class="fa fa-play"> </i></button>
     </div>
 
