--- a/filmesproj/src/app/site/pages/dashboard-page/dashboard-page.component.html
+++ b/filmesproj/src/app/site/pages/dashboard-page/dashboard-page.component.html
@@ -1,7 +1,7 @@
 <div class="site">
     <nav class="menu-navegador">
         <div class="apresentacao-usuario">
-            <div class="imagem"><img class="foto-perfil" [src]="this.usuario.foto"></div>
+            <div class="imagem"><img class="imagem-perfil" [src]="this.usuario.imagem"></div>
             <div class="nome">{{this.usuario.nome}}</div>
         </div>
         <div class="linha "></div>
