--- a/filmesproj/src/app/site/pages/dashboard-page/dashboard-page.component.scss
+++ b/filmesproj/src/app/site/pages/dashboard-page/dashboard-page.component.scss
@@ -150,7 +150,7 @@ $laranja_mais_escuro_ainda_2: rgb(126, 51, 1);
     height: 100%;
 }
 
-.foto-perfil {
+.imagem-perfil {
     clip-path: circle(50% at center);
     height: 100%;
     width: 80%;
